# stock-recommender

./: .gitignore  README.md  pyproject.toml
data/: DJIA.db  NIFTY50.db
stock_recommender/: database_setup_class.py  main.py  stock_recommender.py  technical_indicators_class.py
