[tool.poetry]
name = "stock-recommender-project"
version = "0.1.0"
description = ""
authors = ["syed-hussain-93 <syed.musharot.hussain@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.5"
numpy = "^1.22.0"
black = "^21.12b0"
jupyter = "^1.0.0"
SQLAlchemy = "^1.4.29"
PyMySQL = "^1.0.2"
yfinance = "^0.1.68"
ta = "^0.8.0"
mplfinance = "^0.12.8-beta.6"
mysql-connector-python = "^8.0.27"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
